- Modifying text--mega class to have a lower line-height of 1rem for better redability and prevent headlines from taking too much screen space
:

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -4344,7 +4344,7 @@ h6,
 /* line 112, ../scss/modules/_typography.scss */
 .text--mega {
   font-size: 2.25rem;
-  line-height: 1.333;
+  line-height: 1;
 }
 @media only screen and (min-width: 40.0625em) {
   /* line 112, ../scss/modules/_typography.scss */
